--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brighamdent.github.io/timer/",
+  "homepage": "https://brighamdent.github.io/Rubiks-Cube-Timer/",
   "name": "timer",
   "private": true,
   "version": "0.0.0",
