--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   
   "version": "0.0.0",
   
-  "homepage": "https://www.cubequick.com",
+  "homepage": "https://www.cubequick.com/",
   
   "type": "module",
   
