--- a/package.json
+++ b/package.json
@@ -1,78 +1,31 @@
 {
-  
   "name": "timer",
-  
   "private": true,
-  
   "version": "0.0.0",
-  
-  "homepage": "https://www.cubequick.com/",
-  
+  "homepage": "https://brighamdent.github.io/Rubiks-Cube-Timer",
   "type": "module",
-  
   "scripts": {
-  
-    
-  "dev": "vite",
-  
-    
-  "predeploy": "npm run build",
-  
-    
-  "deploy": "gh-pages -d dist",
-  
-    
-  "build": "vite build",
-  
-    
-  "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-  
-    
-  "preview": "vite preview"
-  
+    "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  
   "dependencies": {
-  
-    
-  "react": "^18.2.0",
-  
-    
-  "react-dom": "^18.2.0",
-  
-    
-  "uuid": "^9.0.1",
-  
-    
-  "vite": "^4.5.3"
-  
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1",
+    "vite": "^4.5.3"
   },
-  
   "devDependencies": {
-  
-    
-  "@types/react": "^18.2.15",
-  
-    
-  "@types/react-dom": "^18.2.7",
-  
-    
-  "@vitejs/plugin-react": "^4.1.0",
-  
-    
-  "eslint": "^8.45.0",
-  
-    
-  "eslint-plugin-react": "^7.32.2",
-  
-    
-  "eslint-plugin-react-hooks": "^4.6.0",
-  
-    
-  "eslint-plugin-react-refresh": "^0.4.3",
-  
-    
-  "gh-pages": "^6.1.1"
-  
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.1.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.1.1"
   }
 }
