--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timer",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://brighamdent.github.io/Rubiks-Cube-Timer",
+  "homepage": "https://cubequick.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
